Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -92,7 +92,7 @@
     "# Your Code here\n",
     "\n",
     "data = []\n",
-    "d\n",
+    "data = csv.reader(w)\n",
     "\n",
     "\n",
     "\n",
