Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -92,7 +92,7 @@
     "# Your Code here\n",
     "\n",
     "data = []\n",
-    "data = csv.reader(w)\n",
+    "data = csv.reader('windsor_housing.')\n",
     "\n",
     "\n",
     "\n",
