Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -92,7 +92,8 @@
     "# Your Code here\n",
     "\n",
     "data = []\n",
-    "data = csv.reader('windsor_housing.')\n",
+    "data = csv.reader('windsor_housing.csv')\n",
+    "\n",
     "\n",
     "\n",
     "\n",
