Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -92,7 +92,8 @@
     "# Your Code here\n",
     "\n",
     "data = []\n",
-    "with open ('windsor_housing.csv')\n",
+    "with open('windsor_housing.csv') as f:\n",
+    "    \n",
     "\n",
     "\n",
     "\n",
