Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -93,7 +93,7 @@
     "\n",
     "data = []\n",
     "with open('windsor_housing.csv') as f:\n",
-    "    \n",
+    "    raw = csv.reader(f)\n",
     "\n",
     "\n",
     "\n",
