Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -94,7 +94,9 @@
     "data = []\n",
     "with open('windsor_housing.csv') as f:\n",
     "    raw = csv.reader(f)\n",
-    "    \n",
+    "    next(raw)\n",
+    "    for row in raw:\n",
+    "        \n",
     "\n",
     "\n",
     "\n",
