Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,8 @@
     "    raw = csv.reader(f)\n",
     "    next(raw)\n",
     "    for row in raw:\n",
-    "        \n",
+    "        ones = [1.0]\n",
+    "        for r in row:\n",
     "\n",
     "\n",
     "\n",
