Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -98,6 +98,7 @@
     "    for row in raw:\n",
     "        ones = [1.0]\n",
     "        for r in row:\n",
+    "            ones.append(float(r))\n",
     "\n",
     "\n",
     "\n",
