Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -99,6 +99,7 @@
     "        ones = [1.0]\n",
     "        for r in row:\n",
     "            ones.append(float(r))\n",
+    "        data.append()\n",
     "\n",
     "\n",
     "\n",
