Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -99,7 +99,8 @@
     "        ones = [1.0]\n",
     "        for r in row:\n",
     "            ones.append(float(r))\n",
-    "        data.append()\n",
+    "        data.append(ones)\n",
+    "da\n",
     "\n",
     "\n",
     "\n",
