Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -100,7 +100,8 @@
     "        for r in row:\n",
     "            ones.append(float(r))\n",
     "        data.append(ones)\n",
-    "da\n",
+    "data = np.array(data)\n",
+    "data[:5]\n",
     "\n",
     "\n",
     "\n",
