Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -101,7 +101,7 @@
     "            ones.append(float(r))\n",
     "        data.append(ones)\n",
     "data = np.array(data)\n",
-    "data[:5]\n",
+    "data[:5,:]\n",
     "\n",
     "\n",
     "\n",
